<resources>
    <string name="app_name">Instagram-Clone</string>
    <string name="title_activity_main_screen">MainActivity</string>
    <string name="title_home">Home</string>
<<<<<<< HEAD
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_in_with_google">Sign In with Google</string>
=======
    <string name="search">Search</string>
    <string name="reel">Reel</string>
    <string name="likes">Like</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
>>>>>>> 6ff428eae574101d1de955743b4a78d3a276b21d
</resources>