<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search" />

    <item
        android:id="@+id/navigation_reel"
        android:icon="@drawable/ic_instagram_reels"
        android:title="@string/reel" />

    <item
        android:id="@+id/navigation_like"
        android:icon="@drawable/ic_heart_thin"
        android:title="@string/likes" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_user_profile"
        android:title="@string/profile" />


</menu>