<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.nero.instagram_clone.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_navigation_home_to_navigation_camera"
            app:destination="@id/navigation_camera" />
    </fragment>

    <fragment
        android:id="@+id/navigation_search"
        android:name="com.nero.instagram_clone.ui.search.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/navigation_reel"
        android:name="com.nero.instagram_clone.ui.reel.ReelFragment"
        android:label="@string/reel"
        tools:layout="@layout/fragment_reel" />
    <fragment
        android:id="@+id/navigation_like"
        android:name="com.nero.instagram_clone.ui.like.LikeFragment"
        android:label="@string/likes"
        tools:layout="@layout/fragment_like" />
    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.nero.instagram_clone.ui.profile.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile" />
    <fragment
        android:id="@+id/navigation_camera"
        android:name="com.nero.instagram_clone.ui.camera.CameraFragment"
        android:label="CameraFragment"
        tools:layout="@layout/fragment_camera">
        <action
            android:id="@+id/action_navigation_camera_to_postFragment2"
            app:destination="@id/postFragment2" />
    </fragment>
    <fragment
        android:id="@+id/postFragment2"
        android:name="com.nero.instagram_clone.ui.externalfragments.PostFragment"
        android:label="fragment_post"
        tools:layout="@layout/fragment_post" />


</navigation>